smol changes